--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html dir="ltr" lang="pt-BR" prefix="og: https://ogp.me/ns#" class="no-js" itemtype="https://schema.org/WebPage" itemscope=""><head>
+	<meta name="facebook-domain-verification" content="empef1fmrd3u6i5kjv25f93x7jtb0x" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 	<title>eu - Asher Negócios Digitais</title>
